fix: main task button not showing when js is disabled

--- a/src/assets/scss/utilities/_requires-js.scss
+++ b/src/assets/scss/utilities/_requires-js.scss
@@ -3,6 +3,10 @@
 		display: none;
 	}
 
+	& + [data-no-js-alternative] {
+		display: flex;
+	}
+
 	:root:not(.no-js) & + [data-no-js-alternative] {
 		display: none;
 	}
